Change color palette for the website

--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>Ernesto Perez</title>
+    <title>Nesto Software</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Ernesto Perez Website">
+    <meta name="description" content="Nesto Software. Software Contractor and IT Consultant">
     <meta name="author" content="Ernesto Perez">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
@@ -46,7 +46,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Ernesto Perez</a>
+                <a class="navbar-brand" href="#page-top">NestoSoft</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -79,9 +79,11 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="images/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Ernesto Perez</span>
+                        <span class="name">Nest-O-Software</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Enterprise Architect - DevOps</span>
+                        <span class="mission">Modernize your development practices</span>
+                        <span class="mission">Scale development teams</span>
+                        <span class="skills">IT Consultancy - Web Development - Enterprise Architecture - DevOps</span>
                     </div>
                 </div>
             </div>
@@ -99,7 +101,7 @@
             </div>
             <div class="row" ng-controller="ProjectCtrl">
                 <div ng-repeat ="project in projects" class="col-sm-4 portfolio-item">
-                    <a ng-href="#{{project.path}}#portfolioModal-{{project.name}}" class="portfolio-link" data-toggle="modal">
+                    <a ng-href="#{{project.path}}" class="portfolio-link" >
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
@@ -108,21 +110,11 @@
                         <img ng-src="images/portfolio/{{project.name}}.png" class="img-responsive" alt="">
                     </a>
                 </div>
-
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="images/portfolio/safe.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-
             </div>
         </div>
+        <div ng-view=""></div>
     </section>
+
     <!-- About Section -->
     <section class="success" id="about">
         <div class="container">
@@ -236,7 +228,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; epn software Ltd. 2016
+                        Copyright &copy; Nesto software Ltd. 2016
                     </div>
                 </div>
             </div>
@@ -248,47 +240,7 @@
             <i class="fa fa-chevron-up"></i>
         </a>
     </div>
-    <!-- Dynamic Portfolio Modals -->
-    <div ng-view=""></div>
-    <!-- Static Portfolio Modals -->
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Project Title</h2>
-                            <hr class="star-primary">
-                            <img src="images/portfolio/safe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
        !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
