Dockerfile to work with the compiled package, some fix for the compiled package

--- a/app/index.html
+++ b/app/index.html
@@ -15,13 +15,12 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <!-- Theme CSS -->
     <link rel="stylesheet" href="styles/freelancer.min.css" >
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/custom.css">
-
+    <!-- endbuild -->
     <!-- Custom Fonts -->
-    <link href="bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -31,7 +30,6 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <!-- endbuild -->
   </head>
   <body ng-app="websiteApp" id="page-top" class="index">
     <!--[if lte IE 8]>
@@ -79,11 +77,10 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="images/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Nest-O-Software</span>
+                        <span class="name">NestOsoft</span>
                         <hr class="star-light">
-                        <span class="mission">Modernize your development practices</span>
-                        <span class="mission">Scale development teams</span>
-                        <span class="skills">IT Consultancy - Web Development - Enterprise Architecture - DevOps</span>
+                        <span class="mission">Helping to deliver projects, solve challenges, modernize your development practices and scale up development teams.</span>
+                        <span class="skills">IT Consultancy - Full Stack Development - Software Engineering - Enterprise Architecture</span>
                     </div>
                 </div>
             </div>
@@ -126,16 +123,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>My name is Ernesto Perez. I write about programming, software development, and architecture with proof of concepts.</p>
-                </div>
-                <div class="col-lg-4">
+                    <p>My name is Ernesto Perez. I love programming and solve complex challenges. Always interested about software development, architecture and new technologies.</p>
                     <p>I'm a professional programmer and software architect living in Cambridge, UK, and currently an IT consultant. I enjoy reading, drawing, playing the guitar, team sports and sunshine.</p>
+                    <p>If you have a problem and I'm around, maybe you can hire me.</p>
                 </div>
-                <!-- <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
-                </div> -->
             </div>
         </div>
     </section>
@@ -279,9 +270,11 @@
       <!-- Plugin JavaScript -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
       <!-- Contact Form JavaScript -->
+
+      <!-- build:js(.) js/custom.js -->
       <script src="js/jqBootstrapValidation.js"></script>
       <script src="js/contact_me.js"></script>
-      <!-- Theme JavaScript -->
       <script src="js/freelancer.min.js"></script>
+      <!-- endbuild -->
 </body>
 </html>
