--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img ng-src="images/portfolio/{{project.name}}.png" class="img-responsive" alt="">
+                        <img ng-src="{{project.image}}" class="img-responsive" alt="">
                     </a>
                 </div>
             </div>
