style change for the views

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Nesto Software. Software Contractor and IT Consultant">
+    <meta name="description" content="NestoSoft. Software Contractor and IT Consultant">
     <meta name="author" content="Ernesto Perez">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
