--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Nesto Software</title>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="Mg8wngG2kpMvnT3Rk8K82dWseCn37_hNsZ2RqI8kWnc" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="NestoSoft. Software Contractor and IT Consultant">
