Add GA and some styling and text

--- a/app/index.html
+++ b/app/index.html
@@ -80,8 +80,9 @@
                     <div class="intro-text">
                         <span class="name">NestOsoft</span>
                         <hr class="star-light">
-                        <span class="mission">Helping to deliver projects, solve challenges, modernize your development practices and scale up development teams.</span>
-                        <span class="skills">IT Consultancy - Full Stack Development - Software Engineering - Enterprise Architecture</span>
+                        <span class="mission">Helping to deliver projects, solve difficult challenges, modernize your development practices.</span>
+                        <hr class="star-light">
+                        <span class="skills">Full Stack Development - Software Engineering - Enterprise Architecture</span>
                     </div>
                 </div>
             </div>
@@ -95,6 +96,28 @@
                 <div class="col-lg-12 text-center">
                     <h2>Portfolio</h2>
                     <hr class="star-primary">
+                    <p>Here I'll show you how this website is done.</p>
+                    <p>This website seems simple but behind the curtains there are many pieces of modern complex websites:</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-offset-2 col-xs-8 col-md-8">
+                    <ul  class="list-group">
+                        <li class="list-group-item">Client side frameworks like Angularjs</li>
+                        <li class="list-group-item">Microservice architecture</li>
+                        <li class="list-group-item">Load balancing multiples instances</li>
+                        <li class="list-group-item">Continous integration and continous deployment</li>
+                        <li class="list-group-item">NoSQL database using Mongo</li>
+                        <li class="list-group-item">Containers with Docker</li>
+                        <li class="list-group-item">Object-oriented programming with C#, Java, Python and Javascript</li>
+                        <li class="list-group-item">Functional programming with F#</li>
+                        <li class="list-group-item">Cross-platform Web frameworks like Nancy, flask, expressjs and Spring</li>
+                    </ul>
+                </div>
+           </div>     
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p>Not everything is documented but be patient it is coming soon.</p>
                 </div>
             </div>
             <div class="row" ng-controller="ProjectCtrl">
@@ -109,8 +132,12 @@
                     </a>
                 </div>
             </div>
-        </div>
-        <div ng-view=""></div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div ng-view=""></div>
+                </div>    
+            </div>
+        </div>    
     </section>
 
     <!-- About Section -->
@@ -240,7 +267,7 @@
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
+       ga('create', 'UA-86359511-1');
        ga('send', 'pageview');
     </script>
 
