adding a few styles for the list

--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,9 @@
                     <div class="intro-text">
                         <span class="name">NestOsoft</span>
                         <hr class="star-light">
-                        <span class="mission">Helping to deliver projects, solve difficult challenges, modernize your development practices.</span>
+                        <span class="mission">Helping to deliver projects</span>
+                        <span class="mission">Solve complex challenges</span>
+                        <span class="mission">Modernize your development practices</span>
                         <hr class="star-light">
                         <span class="skills">Full Stack Development - Software Engineering - Enterprise Architecture</span>
                     </div>
@@ -96,8 +98,11 @@
                 <div class="col-lg-12 text-center">
                     <h2>Portfolio</h2>
                     <hr class="star-primary">
-                    <p>Here I'll show you how this website is done.</p>
-                    <p>This website seems simple but behind the curtains there are many pieces of modern complex websites:</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-offset-1">
+                    <p>Here I'll show you how this website is done. This website seems simple but behind the curtains there are many pieces of modern complex websites:</p>
                 </div>
             </div>
             <div class="row">
