--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/freelancer.min.css" >
+    <link rel="stylesheet" href="styles/freelancer.css" >
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/custom.css">
     <!-- endbuild -->
@@ -122,7 +122,7 @@
            </div>     
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Not everything is documented but be patient it is coming soon.</p>
+                    <p>Not everything is documented but be patient it is coming soon, and if you cannot wait... send me a <a href="#contact">message</a></p>
                 </div>
             </div>
             <div class="row" ng-controller="ProjectCtrl">
