fix the microservice call

--- a/app/index.html
+++ b/app/index.html
@@ -122,7 +122,7 @@
            </div>     
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Not everything is documented but be patient it is coming soon, and if you cannot wait... send me a <a href="#contact">message</a></p>
+                    <p>Not everything is documented but be patient it is coming soon, and if you cannot wait... send me a <span class="page-scroll"><a href="#contact">message</a></span></p>
                 </div>
             </div>
             <div class="row" ng-controller="ProjectCtrl">
